@@ -1,5 +1,50 @@
+# 🥐 CroissantFighter
+
 ## Welcome to CroissantFighter!!
 
+CroissantFighter is a **2-player fighting game built with Java and JavaFX**.  
+Players select characters with unique abilities and battle each other in a fast-paced arena.
 
+Each character belongs to a different combat class, giving them different playstyles and strengths.
 
+---
+
+## 🎮 Features
+
+- Multiple playable characters
+- Different character classes:
+    - ⚔️ **Melee** – strong close combat fighters
+    - 🏹 **Ranged** – attack enemies from a distance
+    - 🧪 **Hybrid** – a mix of melee and ranged abilities
+- Character selection screen
+- Attack animations
+- Projectile-based combat for ranged characters
+- Local multiplayer gameplay
+
+---
+
+## 🛠 Technologies Used
+
+- **Java**
+- **JavaFX**
+- **Gradle**
+- **JUnit**
+
+---
+
+## 🚀 How to Run the Game
+
+Make sure **Java** and **JavaFX** are installed.
+
+Locate where your javafx-sdk are installed and put it in the following command
+
+Run the game using the following command:
+
+```bash
+java --module-path "E:\javafx-sdk-25.0.1\lib" --add-modules javafx.controls,javafx.media -jar CroissantFighter-1-with-sources.jar
+```
+
+---
+
+---
 [![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/IY9augGa)
